--- a/onpe-main/onpe html/participacion.html
+++ b/onpe-main/onpe html/participacion.html
@@ -47,7 +47,7 @@
                   <a href="./presidenciales.html">PRESIDENCIAL</a>
                 </li>
                 <li class="bt-amarillo">
-                  <a href="./cctas-ubigeo.html">ACTAS</a>
+                  <a href="./actas_ubigeo.html">ACTAS</a>
                 </li>
                 <li class="bt-rojo act-rojo">
                   <a href="./participacion.html">PARTICIPACIÓN CIUDADANA</a>
@@ -94,7 +94,7 @@
                   </div>
                   <div class="col-xs-12 line pbot30">
                     <div class="col-xs-12 col-md-6">
-                      <img src="estadistico.png?_tot_participacion=80.093&amp;_tot_ausentismo=19.907" class="img-responsive">
+                      <img src="images/estadistico.png" class="img-responsive">
                     </div>
                     <div class="col-xs-12 col-md-6">
                       <p class="subtitle">ELECTORES HÁBILES 22,901,954</p>
@@ -123,10 +123,10 @@
 
                   <div class="col-xs-12 pbot30 ptop20">
                     <div class="col-xs-12 col-md-6">
-                      <a href="./participacion_total.html?id=extranjero"><img src="images/icono_extranjero.jpg" class="img-responsive"></a>
+                      <a href="./participacion_total.html?id=Extranjero"><img src="images/icono_extranjero.jpg" class="img-responsive"></a>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                      <a href="./participacion_total.html?id=nacional"><img src="images/icono_nacional.jpg" class="img-responsive"></a>
+                      <a href="./participacion_total.html?id=Nacional"><img src="images/icono_nacional.jpg" class="img-responsive"></a>
                     </div>
                   </div>
 
