finish areaubigeo participacion

--- a/onpe-main/onpe html/actas_numero.html
+++ b/onpe-main/onpe html/actas_numero.html
@@ -46,7 +46,7 @@
               <a href="./presidencial.html">PRESIDENCIAL</a>
             </li>
             <li class="bt-amarillo act-amarillo">
-              <a href="./actas-ubigeo.html">ACTAS</a>
+              <a href="./actas_ubigeo.html">ACTAS</a>
             </li>
             <li class="bt-rojo">
               <a href="./participacion.html">PARTICIPACIÓN CIUDADANA</a>
@@ -62,7 +62,7 @@
           <div class="col-xs-12 col-md-3">
             <div class="menu-interna">
               <ul>
-                <li><a href="./actas-ubigeo.html">Actas por ubigeo</a></li>
+                <li><a href="./actas_ubigeo.html">Actas por ubigeo</a></li>
                 <li><a href="./actas-numero.html" class="act-izq">Actas por número</a></li>
               </ul>
             </div>
