--- a/onpe-main/onpe html/participacion_total.html
+++ b/onpe-main/onpe html/participacion_total.html
@@ -47,7 +47,7 @@
                 <a href="./presidenciales.html">PRESIDENCIAL</a>
               </li>
               <li class="bt-amarillo">
-                <a href="./actas_ubigueo.html">ACTAS</a>
+                <a href="./actas_ubigeo.html">ACTAS</a>
               </li>
               <li class="bt-rojo act-rojo">
                 <a href="./participacion.html">PARTICIPACIÓN CIUDADANA</a>
